# Scheduler

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.py  course.py  day.py  example.json  example_rest_config.json  f23-potential.json  faculty.py  identifiable.py  lab.py  pyproject.toml  requirements.txt  room.py  sample.json  scheduler.html  scheduler.py  scheduler_rest.html  time_slot.py  time_slots.json
.github/workflows/: docs.yml  linting.yml  publish.yml
docs/: api.md  configuration.md
examples/: advanced_usage.py  basic_usage.py  concurrent_clients.py  rest_api.py  stress_test.py
fern/: docs.yml  fern.config.json  generators.yml  openapi.json
fern/docs/: styles.css
fern/docs/assets/: combined-config.schema.json
fern/docs/pages/: welcome.mdx
fern/docs/pages/concepts/: diagnostics-auditing.mdx  scheduling-rules.mdx
fern/docs/pages/configuration/: courses.mdx  faculty.mdx  limit.mdx  optimizer-flags.mdx  overview.mdx  rooms-labs.mdx  time-slots.mdx  troubleshooting.mdx
fern/docs/pages/dev/: config-options.mdx  constraints.mdx  contributing.mdx  testing.mdx
fern/docs/pages/python/: overview.mdx  reference.mdx
fern/docs/pages/rest/: quickstart.mdx
scripts/: export_config_schema.py  export_openapi.py  gen_python_api_mdx.py
skills/: README.md
skills/sched-cli-main/: SKILL.md
skills/sched-domain-z3-config/: SKILL.md
skills/sched-fastapi-server/: SKILL.md
skills/sched-fern-openapi-docs/: SKILL.md
skills/sched-github-ci/: SKILL.md
skills/sched-json-types/: SKILL.md
skills/sched-maintain-scripts/: SKILL.md
skills/sched-output-writers/: SKILL.md
skills/sched-pr-conventional-commits/: SKILL.md
skills/sched-ruff-ty-prek/: SKILL.md
skills/sched-testing-pytest/: SKILL.md
skills/sched-uv-workflow/: SKILL.md
src/: config.py  course.py  faculty.py  identifiable.py  lab.py  room.py  routes.py  scheduler.py  time_slot.py
src/scheduler/: __init__.py  audit.py  config.py  configuration.py  contracts.py  diagnostics.py  exceptions.py  json_types.py  logging.py  main.py  problem.py  scheduler.py  server.py  solver.py  time_slot_generator.py
src/scheduler/models/: __init__.py  course.py  day.py  faculty.py  identifiable.py  lab.py  room.py  time_slot.py
src/scheduler/writers/: csv_writer.py  json_writer.py
tests/: __init__.py  conftest.py  scenario_builders.py  test_api_asgi.py  test_architecture.py  test_characterization.py  test_config.py  test_diagnostic_engine.py  test_docstrings.py  test_documentation_parity.py  test_fern_docs.py  test_integration.py  test_models.py  test_problem.py  test_public_api.py  test_resource_and_delivery_features.py  test_schedule_auditor.py  test_smoke.py  test_solver_engine.py  test_writers.py
tests/fixtures/: minimal_config.json
tests/fixtures/characterization/: minimal_api_schedule.json  minimal_audit.json  minimal_schedule.json  two_course_schedules.json  unsatisfiable_diagnosis.json
