[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "course-constraint-scheduler"
dynamic = ["version"]
description = "A constraint solver for generating schedules"
license = "MIT"
license-files = ["LICENSE*"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bidict~=0.23",
    "click~=8.2",
    "fastapi~=0.116",
    "requests~=2.32",
    "pydantic~=2.11",
    "uvicorn[standard]~=0.35",
    "z3-solver~=4.15",
]

classifiers = [
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
scheduler = "scheduler.main:main"
scheduler-server = "scheduler.server:main"

[dependency-groups]
dev = [
  "build~=1.3",
  "httpx~=0.28",
  "prek~=0.3",
  "pytest-cov~=6.0",
    "ruff~=0.12",
    "pytest~=8.0",
  "twine~=6.2",
  "ty~=0.0",
  "pydoc-markdown>=4.8.2",
]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/scheduler"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "I", "SIM", "B", "C4"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^_.*"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# @cache on methods is intentional for solver performance; instances are not long-lived singletons.
[tool.ruff.lint.per-file-ignores]
"src/scheduler/scheduler.py" = ["B019"]
"src/scheduler/time_slot_generator.py" = ["B019"]

[tool.ty.rules]
possibly-unresolved-reference = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: tests that load full example.json or run long solver paths",
]
addopts = [
  "--cov=scheduler",
  "--cov-report=term-missing",
  "--cov-fail-under=75",
]

[tool.coverage.run]
source = ["src/scheduler"]
branch = true
omit = []

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
